<resources>
    <string name="app_name">F1 Constructors Hub</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">F1 Constructors</string>
    <string name="title_notifications">Profile</string>
    <string name="judul">FORMULA 1 CONSTRUCTORS HUB</string>
    <string name="formula">Welcome to F1 Constructors Hub!\n\nStay updated with all the latest information on the teams competing in the thrilling world of Formula 1 racing. Explore detailed profiles of each constructor, including their history, cars, and key players. Whether you are a passionate fan or a curious newcomer, my app provides everything you need to know about the dynamic and fast-paced world of F1 constructors.</string>
    <string name="nama">Farrelly Theo Ariela</string>
    <string name="nim">L0122061</string>
    <string name="prodi_angkatan">Informatika 2022</string>
    <string name="fakultas">Fakultas Teknologi Informasi\ndan Sains Data</string>
    <string name="universitas">Universitas Sebelas Maret</string>
    <string name="email">farrellytheoariela@gmail.com</string>
    <string name="share_data_template">
        Nama Lengkap: %1$s
        NIM: %2$s
        Prodi: %3$s
        Fakultas: %4$s
        Universitas: %5$s
        Email: %6$s
    </string>
    <string name="share_via">Share via</string>
    <string-array name="data_name">
        <item>Red Bull Racing</item>
        <item>Ferrari</item>
        <item>McLaren</item>
        <item>Mercedes</item>
        <item>Aston Martin</item>
        <item>Alpine</item>
        <item>RB</item>
        <item>Williams</item>
        <item>Kick Sauber</item>
        <item>Haas F1 Team</item>
    </string-array>
    <string-array name="data_desc">
        <item><![CDATA[Red Bull were no strangers to F1 - as sponsors - prior to formally entering as a works team in 2004. Nonetheless, the scale of their success over the following decade was staggering. ]]></item>
        <item><![CDATA[For many, Ferrari and Formula 1 racing have become inseparable. The only team to have competed in every season since the world championship began.]]></item>
        <item><![CDATA[Since entering the sport in 1966 under the guidance and restless endeavour of eponymous founder Bruce, McLaren\'s success has been nothing short of breathtaking.]]></item>
        <item><![CDATA[Mercedes modern F1 revival started with the creation of a works squad for 2010 - the platform for a meteoric rise up the Grand Prix order.]]></item>
        <item><![CDATA[Aston Martin’s original Formula 1 foray – over half a century ago – lasted just five races. This time, though, it’s serious. This F1 squad are no strangers to success.]]></item>
        <item><![CDATA[Alpine may be a relatively new name to Formula 1, but Renault’s famous sportscar arm has plenty of motorsport heritage. The 2021 rebrand of the team marked the next step in Renault’s F1 revival.]]></item>
        <item><![CDATA[Established in 2006 as a squad in which young drivers from Red Bull’s prodigious talent pool could cut their F1 teeth, RB – originally named Toro Rosso and then AlphaTauri.]]></item>
        <item><![CDATA[Driven on by the brilliance and passion of the late Sir Frank Williams, Williams grew from humble beginnings to become a Formula 1 behemoth, unrivalled by all except Ferrari and McLaren.]]></item>
        <item><![CDATA[Having enjoyed considerable success in world sportscars, where he helped nurture the emerging talents of future F1 stars Michael Schumacher and Heinz-Harald Frentzen.]]></item>
        <item><![CDATA[The youngest team on the grid, Haas made their highly impressive debut in 2016, and in the process became the first all-American-led F1 squad in three decades.]]></item>
    </string-array>
    <string-array name="data_descdet">
        <item><![CDATA[Red Bull were no strangers to F1 - as sponsors - prior to formally entering as a works team in 2004. Nonetheless, the scale of their success over the following decade was staggering. After a first podium in 2006, the team hit their stride in 2009, claiming six victories and second in the constructors standings. Over the next four seasons they were a tour de force, claiming consecutive title doubles between 2010 and 2013, with Sebastian Vettel emerging as the sports youngest quadruple champion. Now they are recapturing that glory with an equally exciting talent – one named Max Verstappen…]]></item>
        <item><![CDATA[For many, Ferrari and Formula 1 racing have become inseparable. The only team to have competed in every season since the world championship began, the Prancing Horse has grown from the humble dream of founder Enzo Ferrari to become one of the most iconic and recognised brands in the world. Success came quickly through the likes of Alberto Ascari and John Surtees, and continued – in amongst leaner times – with Niki Lauda in the 1970s and then Michael Schumacher in the 2000s, when Ferrari claimed a then unprecedented five consecutive title doubles, securing their status as the most successful and decorated team in F1 history.]]></item>
        <item><![CDATA[Since entering the sport in 1966 under the guidance and restless endeavour of eponymous founder Bruce, McLaren success has been nothing short of breathtaking. Five glittering decades have yielded countless victories, pole positions and podiums, not to mention eight constructors championships. Whats more, some of the sports greatest drivers made their names with the team, including Emerson Fittipaldi, Ayrton Senna, Mika Hakkinen and Lewis Hamilton.]]></item>
        <item><![CDATA[Mercedes’ modern F1 revival started with the creation of a works squad for 2010 - the platform for a meteoric rise up the Grand Prix order. The team generated huge excitement from the off with the sensational return of Michael Schumacher, but headlines soon followed on track: three podiums in their debut season, all via Nico Rosberg - who then claimed a breakthrough pole/victory double at China in 2012. The following season he was paired with Lewis Hamilton, the duo going on to stage some epic title battles as the Silver Arrows swept all before them to become one of the most dominant forces of the modern F1 era – until Red Bull came and stole that crown.]]></item>
        <item><![CDATA[Aston Martin’s original Formula 1 foray – over half a century ago – lasted just five races. This time, though, it’s serious. This F1 squad are no strangers to success, having won in their original guise of Jordan and most recently as Racing Point in 2020. Renowned for their ability to punch above their weight, and now with a two-time champion leading their driver line-up, Aston Martin are very much a team to watch…]]></item>
        <item><![CDATA[Alpine may be a relatively new name to Formula 1, but Renault’s famous sportscar arm has plenty of motorsport heritage. The 2021 rebrand of the team marked the next step in Renault’s F1 revival, begun in 2016 with the takeover of the then-Lotus squad. Already race winners in their new guise, regular podiums and a tilt at the title must be their next target…]]></item>
        <item><![CDATA[Established in 2006 as a squad in which young drivers from Red Bull’s prodigious talent pool could cut their F1 teeth, RB – originally named Toro Rosso and then AlphaTauri – were formed from the ashes of the plucky Minardi team. Sebastian Vettel gave validity to the approach almost immediately, delivering a fairy-tale win in 2008, before going on to enjoy world championship success with parent team Red Bull Racing. Today the ethos of nurturing talent still holds true, though the Italian squad are no longer simply a ‘B team’ but a constructor in their own right.]]></item>
        <item><![CDATA[Driven on by the brilliance and passion of the late Sir Frank Williams, Williams grew from humble beginnings to become a Formula 1 behemoth, unrivalled by all except Ferrari and McLaren in terms of enduring success. Over the past four decades the team has racked up Grand Prix wins and championship glory, and in the process nurtured some of the greatest talents in the sport, both in and out the cockpit. And, following the Williams family decision to step aside after the 2020 sale of the team to Dorilton Capital, a new era has begun.]]></item>
        <item><![CDATA[Having enjoyed considerable success in world sportscars, where he helped nurture the emerging talents of future F1 stars Michael Schumacher and Heinz-Harald Frentzen, Peter Sauber guided his eponymous squad into F1 in 1993. In recent seasons they raced under the Alfa Romeo name - and in 2026 will become the works Audi squad - but for 2024 a new title sponsor brings a new identity to the famous Swiss team.]]></item>
        <item><![CDATA[The youngest team on the grid, Haas made their highly impressive debut in 2016, and in the process became the first all-American-led F1 squad in three decades. Founded by industrialist Gene Haas, they are based in the United States on the same Kannapolis, North Carolina facility as his championship-winning NASCAR Sprint Cup Series team, Stewart-Haas Racing. The Ferrari-powered team also have a UK factory in Banbury…]]></item>
    </string-array>
    <string-array name="data_namedet">
        <item>Oracle Red Bull Racing</item>
        <item>Scuderia Ferrari</item>
        <item>McLaren Formula 1 Team</item>
        <item>Mercedes-AMG PETRONAS F1 Team</item>
        <item>Aston Martin Aramco F1 Team</item>
        <item>BWT Alpine F1 Team</item>
        <item>Visa Cash App RB Formula One Team</item>
        <item>Williams Racing</item>
        <item>Stake F1 Team Kick Sauber</item>
        <item>MoneyGram Haas F1 Team</item>
    </string-array>
    <string-array name="data_drivnumsatu">
        <item>1</item>
        <item>16</item>
        <item>4</item>
        <item>44</item>
        <item>14</item>
        <item>10</item>
        <item>22</item>
        <item>23</item>
        <item>77</item>
        <item>27</item>
    </string-array>
    <string-array name="data_drivnamesatu">
        <item>Max Verstappen</item>
        <item>Charles Leclerc</item>
        <item>Lando Norris</item>
        <item>Lewis Hamilton</item>
        <item>Fernando Alonso</item>
        <item>Pierre Gasly</item>
        <item>Yuki\nTsunoda</item>
        <item>Alexander Albon</item>
        <item>Valtteri Bottas</item>
        <item>Nico Hülkenberg</item>
    </string-array>
    <string-array name="data_drivnumdua">
        <item>11</item>
        <item>55</item>
        <item>81</item>
        <item>63</item>
        <item>18</item>
        <item>31</item>
        <item>3</item>
        <item>2</item>
        <item>24</item>
        <item>20</item>
    </string-array>
    <string-array name="data_drivnamedua">
        <item>Sergio\nPérez</item>
        <item>Carlos Sainz Jr.</item>
        <item>Oscar Piastri</item>
        <item>George Russell</item>
        <item>Lance\nStroll</item>
        <item>Esteban Ocon</item>
        <item>Daniel Ricciardo</item>
        <item>Logan\nSargeant</item>
        <item>Zhou Guanyu</item>
        <item>Kevin Magnussen</item>
    </string-array>
</resources>