<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@drawable/text_background"
            android:layout_marginTop="80dp"
            android:paddingBottom="18dp"
            android:paddingTop="18dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                app:shapeAppearanceOverlay="@style/borderlingkaran"
                app:srcCompat="@drawable/profilepic"
                app:strokeColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="1dp"
                android:text="@string/nama"
                android:layout_marginTop="20dp"
                android:textColor="?android:textColorPrimary"
                android:textSize="19sp"
                android:textStyle="bold"
                android:fontFamily="@font/formula1_regular" />

            <TextView
                android:id="@+id/profile_nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="1dp"
                android:text="@string/nim"
                android:textSize="16sp"
                android:fontFamily="@font/hel_light" />

            <TextView
                android:id="@+id/profile_prodi_angkatan"
                android:layout_width="wrap_content"
                android:padding="1dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/prodi_angkatan"
                android:textSize="16sp"
                android:fontFamily="@font/figtree" />

            <TextView
                android:id="@+id/profile_fakultas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fakultas"
                android:textAlignment="center"
                android:textSize="16sp"
                android:fontFamily="@font/figtree"
                android:padding="1dp"/>

            <TextView
                android:id="@+id/profile_universitas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/universitas"
                android:textSize="16sp"
                android:fontFamily="@font/figtree"
                android:padding="1dp"/>

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/email"
                android:textSize="16sp"
                android:fontFamily="@font/figtree"
                android:padding="1dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="Share Profile"
            android:textColor="@android:color/white"
            android:background="@drawable/button_background"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textSize="18sp"
            android:fontFamily="@font/formula1_regular" />

    </LinearLayout>
</ScrollView>
